--- a/www/css/style.css
+++ b/www/css/style.css
@@ -25,28 +25,6 @@ table.installationData td {
     overflow-x: auto;
 }
 
-#nav{
-    list-style-type: none;
-    overflow: hidden;
-}
-
-#nav li{
-    width: 44%;
-    text-align: center;
-    background-color: #333;
-    float: left;
-    height: 50px;
-    line-height: 50px;
-    margin-right: 2px;
-}
-
-#nav li a{
-    text-decoration: none;
-    color: #fff;
-    font-weight: bold;
-    padding: 20px;
-}
-
 ons-button[modifier="btn"] {
     display: inline-block;
     color: #FFF;
@@ -60,4 +38,18 @@ ons-button[modifier="btn"] {
     background-image: linear-gradient(45deg, #709dff 0%, #91fdb7 100%);
     transition: .4s;
 }
+
+button.button1{
+    /* 文字サイズを1.4emに指定 */
+    font-size: 1.4em;
+ 
+    /* 文字の太さをboldに指定 */
+    font-weight: bold;
+ 
+    /* 縦方向に10px、
+     * 横方向に30pxの余白を指定 */
+    padding: 10px 30px;
+}
+
+
 
