--- a/www/css/style.css
+++ b/www/css/style.css
@@ -47,7 +47,7 @@ table.installationData td {
     padding: 20px;
 }
 
-ons-button[modifier="btn"] {
+.btn {
     display: inline-block;
     color: #FFF;
     width: 120px;
@@ -59,5 +59,12 @@ ons-button[modifier="btn"] {
     overflow: hidden;  
     background-image: linear-gradient(45deg, #709dff 0%, #91fdb7 100%);
     transition: .4s;
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
 
+.cal {
+    height: 250px;
+    width: 100%;
+    margin-bottom: 15px;
+}
