--- a/www/css/style.css
+++ b/www/css/style.css
@@ -25,8 +25,7 @@ table.installationData td {
     overflow-x: auto;
 }
 
-ons-button[modifier="btn"] {
-
+.btn {
     display: inline-block;
     color: #FFF;
     width: 120px;
@@ -40,6 +39,12 @@ ons-button[modifier="btn"] {
     transition: .4s;
     margin-top: 10px;
     margin-bottom: 10px;
+}
+
+.cal {
+    height: 250px;
+    width: 100%;
+    margin-bottom: 15px;
 }
 
 .cal {
